2004-01-07  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/alarm-queue.c (load_alarms): call e_cal_view_start
	to actually start the live query.

2004-01-07  Rodrigo Moya <rodrigo@ximian.com>

	* gui/alarm-notify/alarm-queue.c: added an ECalQuery for each loaded
	client.
	(load_alarms): use a live query to the calendar instead of calling
	e_cal_get_alarms_in_range().
	(alarm_queue_add_client): set query initially to NULL.
	(query_objects_changed_cb): renamed and made it manage both
	"objects_added" and "objects_modified" signals of ECalView.
	(query_objects_removed_cb): manage the "objects_removed" signal of
	ECalView.
	(alarm_queue_remove_client): unref the live query.

2004-01-06  JP Rosevear  <jpr@ximian.com>

	* gui/gnome-cal.c (gnome_calendar_add_event_source): remove the
	item from the hash last and don't free its members because the
	hash table does that for us

2004-01-06  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (impl_upgradeFromVersion): new
	method's implementation.
	(calendar_component_class_init): initialize new epv's member.
	(calendar_component_init): moved migration code to
	impl_upgradeFromVersion.
	(update_uri_for_primary_selection): fixed warning.

	* gui/tasks-component.c (impl_upgradeFromVersion): new
	method's implementation.
	(tasks_component_class_init): initialize new epv's member.
	(tasks_component_init): moved migration code to
	impl_upgradeFromVersion.

2004-01-06  JP Rosevear <jpr@ximian.com>

	* gui/e-select-names-renderer.c (esnr_editing_done): disconnect
	the activated signal

2004-01-06  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/comp-editor.c (comp_editor_finalize): we don't put
	any signal handlers on the client or source client now, but we do
	on the view
	(real_set_e_cal): no signal handlers on the client
	(obj_modified_cb): we are guaranteed this is a signal for our
	component
	(obj_removed_cb): ditto
	(listen_for_changes): listen for changes on the object