@@ -2,6 +2,7 @@
 
 	* gui/alarm-notify/alarm-queue.c (load_alarms): call e_cal_view_start
 	to actually start the live query.
+	(add_component_alarms): check the 'alarms' parameter before using it.
 
 2004-01-07  Rodrigo Moya <rodrigo@ximian.com>
 
